# light

./: PAID_FEATURES.md  README.md  VALIDATION.md  pyproject.toml
light/: app.py  metrics.py
light/extensions/: registry.py
light/search/: clipboard_provider.py  file_provider.py  instant_answer_provider.py  openai_answer_provider.py  web_provider.py
light/ui/: launcher_window.py  layer_shell.py
linux/: .gitignore  README.md  VALIDATION.md  install-hotkey.sh  pyproject.toml  run.sh
linux/light/: __init__.py  __main__.py  app.py
linux/light/actions/: default_actions.json
linux/light/clipboard/: __init__.py  history.py  manager.py
linux/light/configuration/: configuration.py  default_configuration.json
linux/light/extensions/: __init__.py
linux/light/keyboard/: hotkey.py
linux/light/platform/: __init__.py  file_index.py
linux/light/search/: action_provider.py  application_provider.py  calculator_provider.py  currency_provider.py  file_provider.py  instant_answer_provider.py  openai_answer_provider.py  ranking.py  search.py  search_item.py
linux/light/ui/: launcher_window.py  layer_shell.py  preferences_window.py  theme.py
linux/packaging/debian/: build-deb.sh
linux/tests/: test_application_provider.py  test_calculator_provider.py  test_currency_provider.py  test_product_features.py  test_ranking_and_cancel.py  test_search_providers.py  test_theme.py
packaging/debian/: build-deb.sh  com.koustav.light.desktop
packaging/flatpak/: build-flatpak.sh  com.koustav.light.yml
tests/: __init__.py  test_configuration.py
