[project]
name = "light"
version = "0.1.0"
description = "Linux launcher inspired by Spotlight and Raycast"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
light = "light.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["light*"]

[tool.setuptools.package-data]
light = ["configuration/*.json", "actions/*.json"]
